[gd_scene load_steps=19 format=3 uid="uid://dwy48kklpg6tr"]

[ext_resource type="Shader" path="res://src/main/assets/shader/dissolve.gdshader" id="1_akbum"]
[ext_resource type="Theme" uid="uid://dum4ct87pjet4" path="res://src/main/assets/theme/default_theme.tres" id="1_b8bt2"]
[ext_resource type="Script" path="res://src/main/common/classes/ui/weapon_card.gd" id="2_8v2k2"]
[ext_resource type="Texture2D" uid="uid://t15m3at4skvj" path="res://src/main/assets/texture/role/Card/WeaponCard.png" id="2_bk36k"]
[ext_resource type="Shader" path="res://src/main/assets/shader/fake_3D.gdshader" id="2_wujj2"]
[ext_resource type="Texture2D" uid="uid://uqvy8wa4uqwo" path="res://src/main/assets/packs/32X32/5 Weapon icons #5/Icons/Icon_5_75.png" id="6_i0lsp"]
[ext_resource type="Texture2D" uid="uid://dxqwgcdwo37u5" path="res://src/main/assets/packs/16X16/Fantasy RPG icon pack (by Franuka)/Individual icons (16x16)/141.png" id="7_w6mb7"]
[ext_resource type="Script" path="res://src/main/common/classes/StateMachine.gd" id="8_bbs87"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_i18xi"]
frequency = 0.0074

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_aco6i"]
noise = SubResource("FastNoiseLite_i18xi")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4ckko"]
shader = ExtResource("1_akbum")
shader_parameter/dissolve_value = 1.0
shader_parameter/burn_size = 0.08
shader_parameter/burn_color = Color(0.984314, 0.501961, 0, 1)
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_aco6i")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ed528"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dfruo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vgb37"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l4u6u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rd113"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jtsb8"]
shader = ExtResource("2_wujj2")
shader_parameter/rect_size = Vector2(45, 63)
shader_parameter/fov = 90.0
shader_parameter/cull_back = false
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rc60j"]
radius = 16.0
height = 45.0

[node name="WeaponCard" type="Button"]
material = SubResource("ShaderMaterial_4ckko")
offset_right = 45.0
offset_bottom = 63.0
pivot_offset = Vector2(22, 31)
theme = ExtResource("1_b8bt2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ed528")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dfruo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vgb37")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_l4u6u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rd113")
script = ExtResource("2_8v2k2")

[node name="Shadow" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0.364706)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_bk36k")
expand_mode = 1

[node name="CardTexture" type="TextureRect" parent="." groups=["WeaponCard"]]
show_behind_parent = true
material = SubResource("ShaderMaterial_jtsb8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_bk36k")
expand_mode = 1

[node name="WeaponIcon" type="TextureRect" parent="CardTexture"]
layout_mode = 0
offset_left = 15.0
offset_top = 25.0
offset_right = 30.0
offset_bottom = 40.0
texture = ExtResource("6_i0lsp")
expand_mode = 1

[node name="LevelAbove" type="Control" parent="CardTexture"]
anchors_preset = 0
offset_left = 1.0
offset_right = 16.0
offset_bottom = 7.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CardTexture/LevelAbove"]
custom_minimum_size = Vector2(4, 4)
layout_mode = 2
offset_top = 1.0
offset_right = 4.0
offset_bottom = 5.0
size_flags_horizontal = 3
texture = ExtResource("7_w6mb7")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="CardTexture/LevelAbove"]
custom_minimum_size = Vector2(4, 4)
layout_mode = 0
offset_left = 5.0
offset_top = 1.0
offset_right = 9.0
offset_bottom = 5.0
size_flags_horizontal = 3
texture = ExtResource("7_w6mb7")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="CardTexture/LevelAbove"]
custom_minimum_size = Vector2(4, 4)
layout_mode = 0
offset_left = 10.0
offset_top = 1.0
offset_right = 14.0
offset_bottom = 5.0
size_flags_horizontal = 3
texture = ExtResource("7_w6mb7")
expand_mode = 1
stretch_mode = 5

[node name="LevelBelow" type="Control" parent="CardTexture"]
layout_mode = 3
anchors_preset = 0
offset_left = 29.0
offset_top = 56.0
offset_right = 44.0
offset_bottom = 63.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CardTexture/LevelBelow"]
custom_minimum_size = Vector2(4, 4)
layout_mode = 0
offset_top = 1.0
offset_right = 4.0
offset_bottom = 5.0
size_flags_horizontal = 3
texture = ExtResource("7_w6mb7")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="TextureRect2" type="TextureRect" parent="CardTexture/LevelBelow"]
custom_minimum_size = Vector2(4, 4)
layout_mode = 0
offset_left = 5.0
offset_top = 1.0
offset_right = 9.0
offset_bottom = 5.0
size_flags_horizontal = 3
texture = ExtResource("7_w6mb7")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="TextureRect3" type="TextureRect" parent="CardTexture/LevelBelow"]
custom_minimum_size = Vector2(4, 4)
layout_mode = 0
offset_left = 10.0
offset_top = 1.0
offset_right = 14.0
offset_bottom = 5.0
size_flags_horizontal = 3
texture = ExtResource("7_w6mb7")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="WeaponName" type="Label" parent="CardTexture"]
layout_mode = 0
offset_left = 2.0
offset_top = 5.0
offset_right = 42.0
offset_bottom = 14.0
theme_override_font_sizes/font_size = 6
text = "Doombringer"
vertical_alignment = 2

[node name="WeaponPrice" type="Label" parent="CardTexture"]
layout_mode = 0
offset_left = 6.0
offset_top = 15.0
offset_right = 46.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 6
text = "176"
vertical_alignment = 1

[node name="WeaponClass" type="Label" parent="CardTexture"]
layout_mode = 0
offset_left = 4.0
offset_top = 45.0
offset_right = 20.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 6
text = "GUN"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="WeaponOrigin" type="Label" parent="CardTexture"]
layout_mode = 0
offset_left = 25.0
offset_top = 45.0
offset_right = 41.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 6
text = "FIRE"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("8_bbs87")

[node name="DestroyShapeCast2D" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(23, 31)
shape = SubResource("CapsuleShape2D_rc60j")
target_position = Vector2(0, 0)
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
